Added another easter egg location

--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -13,7 +13,7 @@
 <div class="container-fluid meowpointer" id="login" style="padding-top: 180px;">
   <div id="box" onclick="secret()">
       <img id="logo" class="special" src="./images/invsona.png" alt="invsona logo"/>
-    <h1 class="pt-3" id="title">Invsona</h1>
+    <h1 class="pt-3 text-bg-light glow-flash" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
     </div>
@@ -21,13 +21,16 @@
       <div class="pb-5">
         <p class="fs-1 fw-1">ERROR 404:<br> PAGE NOT FOUND</p>
       </div>
-      <form action="/404" method="post">
-      <button type="submit" class="btn btn-primary">
-      RETURN TO HOME
-    </button>
+
+
+        <form action="/404" method="post">
+        <button type="submit" class="btn btn-primary">
+        RETURN TO HOME
+            </button>
+
     </form>
+    <div id="meow"></div>
    </div>
-   <div id="meow"></div>
   </div>
 </div>
 
