--- a/styles/style.css
+++ b/styles/style.css
@@ -81,3 +81,48 @@ h1 {
       transform:rotate(360deg);
   }
 }
+
+.glow-flash{
+  padding-top: 10px;
+  animation: glow-flash 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes glow-flash {
+  from {
+    filter: drop-shadow(0px 0px 10px #ffffff);
+    opacity: 1;
+  }
+  to {
+    filter: drop-shadow(0px 0px 30px #ffffff);
+    opacity: 0;
+  }
+}
+
+.glow { 
+  animation: glow 0.5s ease-in-out infinite alternate  ;
+}
+@keyframes glow {
+  from {
+    filter: drop-shadow(0px 0px 10px #81FFD9);
+  }
+  to {
+    filter: drop-shadow(0px 0px 30px #bd6fc7);
+  }
+}
+
+.flash{
+  animation: flash 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes flash {
+  from {
+    background-image: url('../images/nyancat.png');
+    background-color: #81FFD9;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 1;
+  }
+  to {
+    opacity: 0.5;
+  }
+}
