--- a/views/authorization/logout.ejs
+++ b/views/authorization/logout.ejs
@@ -3,15 +3,17 @@
 <%-include ('../partials/header.ejs')%>
 
 <!-- video background -->
+<div class="bg">
 <video autoplay muted loop id="background">
   <source src="./images/blue_bg.mp4" type="video/mp4" />
 </video>
+</div>
 
 <!-- logo -->
 <div class="container-fluid" id="login" style="padding-top: 200px;">
-  <div id="box">
-    <img id="logo"src="./images/invsona.png" alt="invsona logo" />
-    <h1 class="pt-3" id="title">Invsona</h1>
+  <div id="box" onclick="secret()">
+    <img id="logo" class="special" src="./images/invsona.png" alt="invsona logo" />
+    <h1 class="pt-3 glow" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
     </div>
@@ -22,11 +24,9 @@
       <button type="submit" class="btn btn-primary" onclick="window.location.href='/'">
       HOME
     </button>
-
-
     </form>
-
    </div>
+   <div id="meow"></div>
   </div>
 </div>
 
