--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -5,12 +5,12 @@
 <div class="container-fluid invsona-bg">
       <div class="container text-center align-item-center pt-5" id="decor_user">
         <div class="pt-5 pb-5">
-          <form action="upload.png" method="post" enctype="multipart/form-data">
+
+          <form action="/uploadImage" method="post" enctype="multipart/form-data">
             <label for="fileToUpload">
               <div
                 class="editUserImage"
-                style="background-image: url('../images/cat_placeholder.png')"
-              >
+                style="background-image: url('../images/cat_placeholder.png')">
   
                 <span>Edit Profile Picture</span>
                 <div style="position: relative">
@@ -18,12 +18,16 @@
                 </div>
               </div>
             </label>
-            <input type="File" name="fileToUpload" id="fileToUpload">
+            <input type="file" name="fileToUpload" id="fileToUpload"/> 
           </form>
+
         </div>
       </div>
 
   
+
+
+
       <!-- Menu -->
       <div class="container px-4 align-item-center ">
 
