minor fixes on about us and faq

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <!-- Home page for logged in users -->
 
 <!-- navbar -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header-internal.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
