--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!-- Purpose: Landing page for Invsona -->
 
 <!-- header -->
-<%-include ('./partials/header.ejs')%>
+<%-include ('./partials/header-internal.ejs')%>
 
 <!-- video background -->
 <video autoplay muted loop id="background">
