--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,6 +1,6 @@
 <!-- Profile information -->
 <!-- header -->
-<%-include ('../partials/header.ejs')%>
+<%-include ('../partials/header-internal.ejs')%>
 
 <div class="container-fluid invsona-bg">
       <div class="container text-center align-item-center pt-5" id="decor_user">
