--- a/styles/style.css
+++ b/styles/style.css
@@ -1,25 +1,16 @@
 /* GLOBAL CSS SHEET */
-.invsona-bg {
-  background-image: url("../images/bg.jpg");
-  background-color: #98a6d4;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  margin: 0;
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  overflow: auto;
-}
-
-.invsona-bg::after{
-  clear: both;
-}
 
 body {
   font-family: "Gugi", sans-serif;
+  margin: 0;
+  padding: 0;
 }
+
+.invsona-bg {
+  background: url("../images/bg.jpg") no-repeat center top fixed;
+  background-size: cover;
+}
+
 
 h1 {
   text-align: center;
