--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,5 +1,5 @@
 <!-- header -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header-internal.ejs")%>
 
 <h1>This is the chat.</h1>
 
