--- a/views/generalPrompt.ejs
+++ b/views/generalPrompt.ejs
@@ -1,5 +1,5 @@
 <!-- header -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header-internal.ejs")%>
 
 <!-- content -->
 <h1>General prompt page</h1>
