--- a/views/persona.ejs
+++ b/views/persona.ejs
@@ -1,5 +1,5 @@
 <!-- back button and footer -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header-internal.ejs")%>
 <%-include ("./partials/emptybackbar.ejs")%>
 <div class="col text-center">
   <h1>PERSONA</h1>
