--- a/views/profile/accountSettings.ejs
+++ b/views/profile/accountSettings.ejs
@@ -1,6 +1,6 @@
 <!-- Accouunt Settings -->
 <!-- header and back header title page -->
-<%-include ('../partials/header.ejs')%>
+<%-include ('../partials/header-internal.ejs')%>
 <%-include ('../partials/emptybackbar.ejs')%>
 
 <!-- header title -->
