--- a/views/profile/faq.ejs
+++ b/views/profile/faq.ejs
@@ -1,6 +1,6 @@
 <!-- FAQ page -->
 <!-- header -->
-<%-include ('../partials/header.ejs')%>
+<%-include ('../partials/header-internal.ejs')%>
 
 <!-- back title bar -->
 <%-include ('../partials/emptybackbar.ejs')%>
@@ -9,26 +9,24 @@
     </div>
 </div>
 
-<div class="container p-2" style="margin-bottom: 100px;">
+<div class="container mt-3">
     <div class="card">
-    <img class="card-img-top" src="../images/faq.jpg" alt="...">
-    <br>
     <div class="card-body">
-        <h5>Q: What is Invsona? </h5>
+        <h6><b>Q: What is Invsona?</b></h6>
         <p class="para"> Invsona is a combination word with Invent and Persona.</p>
-        <h5>Q: What is Persona?</h5>
+        <h6><b>Q: What is Persona?</b></h6>
         <p class="para">Persona is a fictional character that is generated. They view as life-like due to their personality and interactions.</p>
-        <h5>Q: What is the purpose of Invsona?</h5>
+        <h6><b>Q: What is the purpose of Invsona?</b></h6>
         <p class="para">Invsona is a tool that helps to overcome creative block. It is also a tool that helps to generate persona for your creative needs.</p>
-        <h5>Q: What is a filter?</h5>
+        <h6><b>Q: What is a filter?</b></h6>
         <p class="para">Accessible through Profile and Saved. Filter allows you to create prompts that you want to generate your persona and/or dialogue.</p>
-        <h5>Q: What is a Dialogue? </h5>
+        <h6><b>Q: What is a Dialogue?</b></h6>
         <p class="para">The unique interaction between your personas.</p>
-        <h5>Q: If I want to generate a persona with status, what do I do?</h5>
+        <h6><b>Q: If I want to generate a persona with status, what do I do?</b></h6>
         <p class="para">Go to Saved or Profile > Filters > and add your filters there. </p>
-        <h5>Q: How do I share my persona and dialogue?</h5>
+        <h6><b>Q: How do I share my persona and dialogue?</b></h6>
         <p class="para">A few possible ways through Persona and hit the share icon or from the Saved on the navigation bar.</p>
-        <h5>Q: How do I contact Team Invsona?</h5>
+        <h6><b>Q: How do I contact Team Invsona?</b></h6>
         <p class="para">You can reach our team: Support@Invsona.ca</p>
         </div>
     </div>
