--- a/views/savedPrompt.ejs
+++ b/views/savedPrompt.ejs
@@ -1,5 +1,5 @@
 <!-- header -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header-internal.ejs")%>
 
 <h1>This is the saved prompt preset page.</h1>
 
