minor fixes on about us and faq

--- a/views/authorization/logout.ejs
+++ b/views/authorization/logout.ejs
@@ -11,9 +11,9 @@
 
 <!-- logo -->
 <div class="container-fluid" id="login" style="padding-top: 200px;">
-  <div id="box" onclick="secret()">
+  <div id="box">
     <img id="logo" class="special" src="./images/invsona.png" alt="invsona logo" />
-    <h1 class="pt-3 glow" id="title">Invsona</h1>
+    <h1 class="pt-3 glow" onclick="secret()" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
     </div>
