Made skeleton pages

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -51,7 +51,7 @@
 
         <!-- Filters -->
         <div class="card p-2 bg-secondary">
-          <a href="###">
+          <a href="/filters">
             <div class="row">
               <div class="col-2">
                 <img
@@ -69,7 +69,7 @@
 
         <!-- Saved Persona -->
         <div class="card p-2 bg-secondary">
-          <a href="####">
+          <a href="/saved/persona">
             <div class="row">
               <div class="col-2">
                 <img
@@ -87,7 +87,7 @@
 
         <!-- Saved Dialogue -->
         <div class="card p-2 bg-secondary">
-          <a href="#####">
+          <a href="/saved/dialogue">
             <div class="row">
               <div class="col-2">
                 <img
