--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -47,7 +47,7 @@
 
         <!-- Filters -->
         <div class="card p-2 bg-secondary">
-          <a href="###">
+          <a href="/filters">
             <div class="row">
               <div class="col-2">
                 <img
@@ -65,7 +65,7 @@
 
         <!-- Saved Persona -->
         <div class="card p-2 bg-secondary">
-          <a href="####">
+          <a href="/saved/persona">
             <div class="row">
               <div class="col-2">
                 <img
@@ -83,7 +83,7 @@
 
         <!-- Saved Dialogue -->
         <div class="card p-2 bg-secondary">
-          <a href="#####">
+          <a href="/saved/dialogue">
             <div class="row">
               <div class="col-2">
                 <img
