--- a/styles/profile.css
+++ b/styles/profile.css
@@ -6,6 +6,10 @@
   position: absolute;
   right: 0;
   bottom: 0;
+  background-color: whitesmoke;
+  padding: 10px;
+  border-style: solid 10px black;
+  border-radius: 100%;
 }
 
 .editUserImage {
@@ -41,4 +45,12 @@
 form input[type="file"] {
   display: none;
   cursor: pointer;
+}
+
+#menubtn{
+  text-align: start;
+}
+
+.card{
+  filter: drop-shadow(0px 0px 2px #FFFF);
 }
