Minor changes in design for profile

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -2,7 +2,7 @@
 <!-- header -->
 <%-include ('../partials/header-internal.ejs')%>
 
-<div class="container-fluid invsona-bg">
+<div class="container-fluid">
       <div class="container text-center align-item-center pt-5" id="decor_user">
         <div class="pt-5 pb-5">
 
@@ -29,10 +29,10 @@
 
 
       <!-- Menu -->
-      <div class="container px-4 align-item-center ">
+      <div class="container px-3">
 
         <!-- Account Settings -->
-        <div class="card p-2 bg-secondary">
+        <div class="card p-3 bg-secondary btn">
           <a href="/profile/account-settings">
             <div class="row ">
               <div class="col-2">
@@ -43,14 +43,14 @@
                   alt=""
                 />
               </div>
-              <div class="col ">Account Settings</div>
+              <div class="col" id="menubtn">Account Settings</div>
             </div>
           </a>
         </div>
         <br />
 
         <!-- Filters -->
-        <div class="card p-2 bg-secondary">
+        <div class="card p-3 bg-secondary btn">
           <a href="/filters">
             <div class="row">
               <div class="col-2">
@@ -61,14 +61,14 @@
                   alt=""
                 />
               </div>
-              <div class="col">Filters</div>
+              <div class="col" id="menubtn">Filters</div>
             </div>
           </a>
         </div>
         <br />
 
         <!-- Saved Persona -->
-        <div class="card p-2 bg-secondary">
+        <div class="card p-3 bg-secondary btn" >
           <a href="/saved/persona">
             <div class="row">
               <div class="col-2">
@@ -79,14 +79,14 @@
                   alt=""
                 />
               </div>
-              <div class="col">Saved Persona</div>
+              <div class="col"id="menubtn">Saved Persona</div>
             </div>
           </a>
         </div>
         <br />
 
         <!-- Saved Dialogue -->
-        <div class="card p-2 bg-secondary">
+        <div class="card p-3 bg-secondary btn" >
           <a href="/saved/dialogue">
             <div class="row">
               <div class="col-2">
@@ -97,14 +97,14 @@
                   alt=""
                 />
               </div>
-              <div class="col">Saved Dialogue</div>
+              <div class="col"id="menubtn">Saved Dialogue</div>
             </div>
           </a>
         </div>
         <br />
 
         <!-- About Us -->
-        <div class="card p-2 bg-secondary">
+        <div class="card p-3 bg-secondary btn" >
           <a href="/about-us">
             <div class="row">
               <div class="col-2">
@@ -115,14 +115,14 @@
                   alt=""
                 />
               </div>
-              <div class="col ">About Us</div>
+              <div class="col" id="menubtn">About Us</div>
             </div>
           </a>
         </div>
         <br />
 
         <!-- FAQ -->
-        <div class="card p-2 bg-secondary">
+        <div class="card p-3 bg-secondary btn" >
           <a href="/faq">
             <div class="row">
               <div class="col-2">
@@ -133,12 +133,12 @@
                   alt=""
                 />
               </div>
-              <div class="col">FAQ</div>
+              <div class="col" id="menubtn">FAQ</div>
             </div>
           </a>
         </div>
         <br />
-        <br />
+   
 
         <!-- Logout -->
         <div class="text-center ">
