Added save page

--- a/views/saved/saved.ejs
+++ b/views/saved/saved.ejs
@@ -9,10 +9,18 @@
     </div>
 </div>
 
-<div class="container pt-5" style="padding-bottom: 100px;">
-<p>this is a saved page</p>
-</div><br>
+<div class="container p-5 my-5">
+    <div class="row">
+    <div class="card col btn p-5" id="title">Persona</div>
+    </div> <br><br>
+    <div class="row">
+    <div class="card col btn p-5" id="title">Dialogue</div>
+    </div> <br><br>    
+    <div class="row">
+    <div class="card col btn p-5" id="title">Prompt</div>
+    </div>
 </div>
+
 
 
 <!-- navbar and footer -->
