--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,21 +10,21 @@
     <div class="p-3 mt-5">
       <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
     </div>
-    <h1 id="display-name"><%- name%></h1>
+    <h1 id="display-name"><%-name%></h1>
   </div>
 
   
   <!-- cards -->
   
-  <div class="container align-item-center text-center">
+  <div class="container-lg align-item-center text-center">
     <div class="row">
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
         <div class="col-6 px-2 py-2">
-          <a type="button" role="button" class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
+          <a class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
             <img src="<%-locals.navLinks[i].icon%>" style="opacity: 70%;" class="pt-2 pb-1" alt="">
               <p class="card-title" id="card-name"><%- locals.navLinks[i].upperName %></p>
               <p class="card-text" style="font-size: 9pt; width:150px; height: 80px;"><%- locals.navLinks[i].description %></p>
-          </a>
+          </a><br><br>
         </div>
         <% } %>
       </div>
