Fix layout on persona page

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
       <div class="container text-center align-item-center pt-5" id="decor_user">
-        <div class="py-5">
+        <div class="pb-4 pt-5">
           <form action="upload.png" method="post" enctype="multipart/form-data">
             <label for="fileToUpload">
               <div
