--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <div
-  class="container-fluid text-center fixed-bottom btn py-2"
+  class="container-fluid text-center fixed-bottom"
   id="botnav"
 >
   <div class="row">
