--- a/views/persona/persona.ejs
+++ b/views/persona/persona.ejs
@@ -1,5 +1,5 @@
 <!-- back button and footer -->
-<%-include ("./partials/header-persona.ejs")%>
+<%-include ("../partials/header-persona.ejs")%>
 
 <!-- content -->
 
@@ -16,5 +16,5 @@
 
 
 <!-- footer and navbar -->
-<%-include ("./partials/navbar.ejs")%>
-<%-include ("./partials/footer.ejs")%>
+<%-include ("../partials/navbar.ejs")%>
+<%-include ("../partials/footer.ejs")%>
