--- a/views/persona/savedPrompt.ejs
+++ b/views/persona/savedPrompt.ejs
@@ -3,7 +3,7 @@
 <%-include ("../partials/header-persona.ejs")%>
 <%-include ("../partials/emptybackbar.ejs")%>
 <div class="col text-center">
-  <h1>SAVED PROMPT PRESET</h1>
+  <h1>SAVED PROMPT</h1>
 </div>
 </div> 
 </div>
