--- a/views/persona/newPrompt.ejs
+++ b/views/persona/newPrompt.ejs
@@ -7,6 +7,7 @@
   <h1>NEW PROMPT</h1>
 </div>
 </div> 
+</div> 
 </div>
 
 <!-- content -->
@@ -20,13 +21,9 @@
   </form>
   <br>
 
-  <form id="deleteForm" action="/persona/new-prompt/delete" method="post">
-    <input id="deleteIndex" type="hidden" name="index" value="" />
-  </form>
-
   <form action="/persona/chat" method="post" class="text-center">
     <div class="row">
-      <% for (var i=0; i<newParameter.length; i++) { %>
+      <% for (var i=0; i<locals.savedPromptParameter.length; i++) { %>
       <div class="col-12">
         <div class="card text-center">
           <div class="card-body">
@@ -39,53 +36,10 @@
       <% } %>
     </div>
     <br>
-    <button class="btn" type="submit" name="action" value="Edit">Send</button>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveParameterModal">
-      Save Parameter Set
-    </button>
-
+    <button class="btn" type="submit">Send</button>
   </form>
 </div>
-
-
-<!-- Modal -->
-<div class="modal fade" id="saveParameterModal" tabindex="-1" aria-labelledby="saveParameterModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="saveParameterModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <form action="/persona/new-prompt/saved" method="post">
-        <div class="modal-body">
-          <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
-            <input class="form-control" type="text" name="title" />
-          </div>
-          <div class="mb-3">
-            <label for="description" class="form-label">Description (Optional)</label>
-            <input class="form-control" type="text" name="description" id="description" />
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button class="btn" type="submit">Save</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
 <br>
-<script>
-  $(document).ready(function() {
-    $('.delete-icon').on('click', function() {
-      var index = $(this).data('index');
-      $('#deleteIndex').val(index);
-      $('#deleteForm').submit();
-    });
-  });
-</script>
 
 <!-- navbar and footer -->
 <%-include ("../partials/navbar.ejs")%>
