Reroute files to new location into folders

--- a/views/dialogue/dialogueChat.ejs
+++ b/views/dialogue/dialogueChat.ejs
@@ -1,5 +1,5 @@
 <!-- header -->
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 
 <h1>This is the dialogue generator.</h1>
 
@@ -34,5 +34,5 @@
 </form>
 
 <!-- navbar and footer -->
-<%- include("./partials/navbar.ejs") %>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/navbar.ejs") %>
+<%- include("../partials/footer.ejs") %>
