--- a/views/dialogue/dialogueFilters.ejs
+++ b/views/dialogue/dialogueFilters.ejs
@@ -1,5 +1,5 @@
 <!-- navbar and footer -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("../partials/header.ejs")%>
 
 <h1>This is the dialogue filters</h1>
 <form action="/dialogueFilters" method="POST"></form>
@@ -17,5 +17,5 @@
 <p><%= output %></p>
 <% } %>
 
-<%-include ("./partials/navbar.ejs")%>
-<%-include ("./partials/navbar.ejs")%>
+<%-include ("../partials/navbar.ejs")%>
+<%-include ("../partials/navbar.ejs")%>
