--- a/views/dialogue/dialogueHome.ejs
+++ b/views/dialogue/dialogueHome.ejs
@@ -1,5 +1,5 @@
 <!-- navbar and footer -->
-<%-include ("./partials/header.ejs")%>
+<%-include ("../partials/header.ejs")%>
 
 <h1>This is the persona page.</h1>
 <div class="container">
@@ -12,4 +12,4 @@
     <% } %>
 </div>
 
-<%-include ("./partials/navbar.ejs")%>
+<%-include ("../partials/navbar.ejs")%>
