--- a/views/authorization/login.ejs
+++ b/views/authorization/login.ejs
@@ -12,7 +12,7 @@
 <!-- logo -->
 <div class="container-fluid" id="login">
   <div id="box">
-    <img id="logo" src="./images/invsona.png" alt="invsona logo" />
+    <img id="logo" src="../images/invsona/invsona.png" alt="invsona logo" />
     <h1 class="pt-3" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
