--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -12,7 +12,7 @@
 <!-- logo -->
 <div class="container-fluid meowpointer" id="login" style="padding-top: 180px;">
   <div id="box" onclick="secret()">
-      <img id="logo" class="special" src="./images/invsona.png" alt="invsona logo"/>
+      <img id="logo" class="special" src="../images/invsona/invsona.png" alt="invsona logo"/>
     <h1 class="pt-3 text-bg-light glow-flash" id="title">Invsona</h1>
     <div class="container mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
