--- a/views/authorization/signup.ejs
+++ b/views/authorization/signup.ejs
@@ -11,7 +11,7 @@
 <!-- logo -->
 <div class="container-fluid" id="login">
   <div id="box">
-    <img id="logo" src="./images/invsona.png" alt="invsona logo" />
+    <img id="logo" src="../images/invsona/invsona.png" alt="invsona logo" />
     <h1 class="pt-2" id="title">Invsona</h1>
     <div class="mb-4">
       <p id="slogan">Character Creation at Your Finger Tips</p>
