--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 <div class="invsona-bg">
   <div class="container text-center align-item-center p-2 pt-1">
     <div class="p-3 mt-5">
-      <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
+      <img src="../images/cats/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
     </div>
     <h1 id="display-name"><%-name%></h1>
   </div>
