--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <!-- logo -->
 <div class="container-fluid" id="content">
   <div id="box">
-    <img id="logo" src="./images/invsona.png" alt="invsona logo" />
+    <img id="logo" src="../images/invsona/invsona.png" alt="invsona logo" />
     <h1 class="pt-3"id="title">Invsona</h1>
     <div class="mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
