--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -9,7 +9,7 @@
             <label for="fileToUpload">
               <div
                 class="editUserImage"
-                style="background-image: url('../images/cat_placeholder.png')"
+                style="background-image: url('../images/cats/cat_placeholder.png')"
               >
   
                 <span>Edit Profile Picture</span>
