--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -3,7 +3,7 @@
 
 <h1>This is the chat.</h1>
 
-<div class="container" id="chatContainer">
+<div class="container mb-5 pb-5" id="chatContainer">
   <!-- Existing chat messages -->
   <div class="row">
     <% for (var i=0; i<personaHistory.length; i++) { %>
