Debug general prompt feature

--- a/views/generalPrompt.ejs
+++ b/views/generalPrompt.ejs
@@ -5,17 +5,12 @@
 <h1>General prompt page</h1>
 <div class="container">
   <div class="row">
-    <form action="/persona/chat" method="post" class="text-center">
+    <form action="/persona/chat/general" method="post" class="text-center">
       <div class="col-12">
         <div class="card text-center">
           <div class="card-body">
             <label class="card-title">Name</label><br />
-            <input
-              class="form-control"
-              type="text"
-              name="name"
-              placeholder="Enter name"
-            />
+            <input class="form-control" type="text" name="name" placeholder="Enter name" />
           </div>
         </div>
       </div>
@@ -23,12 +18,7 @@
         <div class="card text-center">
           <div class="card-body">
             <label class="card-title">Age</label><br />
-            <input
-              class="form-control"
-              type="text"
-              name="name"
-              placeholder="Enter age"
-            />
+            <input class="form-control" type="text" name="age" placeholder="Enter age" />
           </div>
         </div>
       </div>
@@ -36,25 +26,7 @@
         <div class="card text-center">
           <div class="card-body">
             <label class="card-title">Gender</label><br />
-            <input
-              class="form-control"
-              type="text"
-              name="name"
-              placeholder="Enter gender"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="col-12">
-        <div class="card text-center">
-          <div class="card-body">
-            <label class="card-title">Situation</label><br />
-            <input
-              class="form-control"
-              type="text"
-              name="name"
-              placeholder="Enter the situation your persona is in"
-            />
+            <input class="form-control" type="text" name="gender" placeholder="Enter gender" />
           </div>
         </div>
       </div>
@@ -62,12 +34,7 @@
         <div class="card text-center">
           <div class="card-body">
             <label class="card-title">Plot/Setting</label><br />
-            <input
-              class="form-control"
-              type="text"
-              name="name"
-              placeholder="Enter the plot/setting your persona is in"
-            />
+            <input class="form-control" type="text" name="plot" placeholder="Enter the plot/setting your persona is in" />
           </div>
         </div>
       </div>
