Connect to mongo database and implement dynamic population in collapse menu

--- a/views/savedPrompt.ejs
+++ b/views/savedPrompt.ejs
@@ -3,26 +3,34 @@
 
 <h1>This is the saved prompt preset page.</h1>
 
-<!-- placeholder for saved prompt presets db -->
 <div class="container">
-  <form action="/persona/chat" method="post" class="text-center">
-    <div class="row">
-      <% for (var i=0; i<locals.savedPromptParameter.length; i++) { %>
-      <div class="col-12">
-        <div class="card text-center">
-          <div class="card-body">
-            <label class="card-title"><%- i + "&nbsp;" + locals.savedPromptParameter[i] %></label><br>
-            <input class="form-control" type="text" name="<%- locals.savedPromptParameter[i] %>" placeholder="Enter <%- locals.savedPromptParameter[i] %>" />
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <% for (var i=0; i<savedPromptParameter.length; i++) { %>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse<%- [i] %>" aria-expanded="false" aria-controls="flush-collapse<%- [i] %>">
+          <%- savedPromptParameter[i].title %>
+        </button>
+      </h2>
+      <div id="flush-collapse<%- [i] %>" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          <p><%- savedPromptParameter[i].description %></p>
+          <p><%- savedPromptParameter[i].date %></p>
+          <form action="/persona/chat" method="post"></form>
+          <% for (var j=0; j<savedPromptParameter[i].parameterSet.length; j++) { %>
+          <div class="mb-3">
+            <label class="card-title"><%- savedPromptParameter[i].parameterSet[j] %></label><br>
+            <input class="form-control" type="text" name="<%- savedPromptParameter[i].parameterSet[j] %>" placeholder="Enter <%- savedPromptParameter[i].parameterSet[j] %>" />
           </div>
+          <% } %>
+          <button class="btn" type="submit">Send</button>
+          </form>
         </div>
       </div>
-      <% } %>
     </div>
-    <br>
-    <button class="btn" type="submit">Send</button>
-  </form>
+    <% } %>
+  </div>
 </div>
-
 <!-- navbar and footer -->
 <%-include ("./partials/navbar.ejs")%>
 <%-include ("./partials/footer.ejs")%>
