--- a/views/partials/header-internal.ejs
+++ b/views/partials/header-internal.ejs
@@ -18,6 +18,7 @@
   
     <!-- js files -->
     <script src="../src/secret.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
     <!-- google icon -->
