Added a reference to home display picture

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,16 +8,17 @@
 <!-- content -->
 <!-- display picture and name  -->
 <div class="invsona-bg">
-  <div class="container text-center align-item-center p-2 pt-1">
+  <div class="rcontainer text-center align-item-center p-2 pt-1">
     <div class="p-3 mt-5">
-      <img src="../images/cats/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
+      <!-- <img src="../images/cats/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" /> -->
+       <img src="<%- profilePicture %>" id="userImage" alt="userImage" class="p-2" />
     </div>
-    <h1 id="display-name"><%-name%></h1>
+    <h1 id="display-name"><%- name %></h1>
   </div>
-
+  
   
   <!-- cards -->
-  
+
   <div class="container-lg align-item-center text-center">
     <div class="row">
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
