implemented chat with persona

--- a/views/dialogue/userPersonaChat.ejs
+++ b/views/dialogue/userPersonaChat.ejs
@@ -5,7 +5,7 @@
 
 <!-- title -->
 <div class="col text-center">
-    <h1>GENERAL PROMPT</h1>
+    <h1>Talk to a persona!</h1>
 </div>
 </div>
 </div>
@@ -17,27 +17,16 @@
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body">
-                        <label class="card-title">Enter a persona you want to hear about!</label><br />
-                        <input class="form-control" type="text" name="persona" placeholder="Enter a persona description" />
-                    </div>
-                </div>
-            </div>
-        
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <label class="card-title">What situation is the persona faced with?</label><br />
-                        <input class="form-control" type="text" name="name"
-                            placeholder="Enter the situation your persona is in" />
+                        <label class="card-title">Persona</label><br />
+                        <input class="form-control" type="text" name="name" placeholder="Enter a persona you want to talk to!" />
                     </div>
                 </div>
             </div>
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body">
-                        <label class="card-title">What kind of setting are they in?</label><br />
-                        <input class="form-control" type="text" name="name"
-                            placeholder="Enter the plot/setting your persona is in" />
+                        <label class="card-title">Start your chat!</label><br />
+                        <input class="form-control" type="text" name="chat" placeholder="Enter what you want to say to the persona" />
                     </div>
                 </div>
             </div>
