polished dialogue.js

--- a/views/dialogue/innerDialogue.ejs
+++ b/views/dialogue/innerDialogue.ejs
@@ -5,7 +5,8 @@
 
 <!-- title -->
 <div class="col text-center">
-    <h1>GENERAL PROMPT</h1>
+    <h3>Create an inner dialogue.</h3>
+    <p>Have you ever wondered what a persona could be thinking?</p>
 </div>
 </div>
 </div>
@@ -17,7 +18,7 @@
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body">
-                        <label class="card-title">Enter a persona you want to hear about!</label><br />
+                        <label class="card-title">Enter a persona</label><br />
                         <input class="form-control" type="text" name="persona" placeholder="Enter a persona description" />
                     </div>
                 </div>
