--- a/views/dialogue/userPersonaChat.ejs
+++ b/views/dialogue/userPersonaChat.ejs
@@ -5,7 +5,8 @@
 
 <!-- title -->
 <div class="col text-center">
-    <h1>Talk to a persona!</h1>
+    <h3>Chat with a persona.</h3>
+    <p>Have you ever wanted to talk to a character?</p>
 </div>
 </div>
 </div>
